Another attempt to prevent overflow breaking layout

--- a/public/simple/textbox.css
+++ b/public/simple/textbox.css
@@ -46,9 +46,8 @@ div.msg *{
   font-size: 32px;
   font-weight: normal;
   margin: 5px 0;
-  word-wrap: break-word;
+  word-break: break-word;
   font-family: 'Montserrat', sans-serif;
-  overflow-wrap: break-word;
 }
 
 div.msg img {
